# miniml

./: CHANGELOG.md  LICENSE  cabal.project  format.sh  miniml.cabal
src/: Miniml.hs
src-exe/: Main.hs
src/Miniml/: Codegen.hs  Compiler.hs  Cps.hs  Lambda.hs  Machine.hs  Semantics.hs  Shared.hs  Spill.hs
src/Miniml/Closure/: Convert.hs  Free.hs  Lift.hs
src/Miniml/Optimization/: CataExample.hs  Contract.hs  Cse.hs  Eta.hs  Expand.hs  Flatten.hs  Hoist.hs  Uncurry.hs
test/: CpsConvert.hs  MinimlTest.hs  Semantic.hs  Spill.hs
test/Closure/: Convert.hs  Free.hs  Lift.hs
test/Optimization/: Contract.hs  Cse.hs  Eta.hs  Expand.hs  Flatten.hs  Hoist.hs  Uncurry.hs
