cabal-version:      3.0
name:               miniml
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             D M
maintainer:         darinm223@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Miniml
                    , Miniml.Compiler
                    , Miniml.Cps
                    , Miniml.Lambda
                    , Miniml.Optimization.Contract
                    , Miniml.Optimization.Flatten
                    , Miniml.Optimization.Eta
                    , Miniml.Optimization.Uncurry
                    , Miniml.Optimization.Expand
                    , Miniml.Optimization.Hoist
                    , Miniml.Optimization.Cse
                    , Miniml.Closure.Free
                    , Miniml.Closure.Convert
                    , Miniml.Closure.Lift
                    , Miniml.Spill
                    , Miniml.Semantics
                    , Miniml.Shared
                    , Miniml.Machine
                    , Miniml.Codegen

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.21
                    , containers
                    , extra
                    , hashable
                    , mtl
                    , optics
                    , recursion-schemes
                    , text
                    , unordered-containers
    ghc-options: -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wredundant-constraints
                 -Wredundant-record-wildcards
                 -Wunused-record-wildcards
                 -fshow-hole-constraints
                 -haddock
    hs-source-dirs:   src
    default-language: GHC2021

executable miniml
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.21,
        miniml

    hs-source-dirs:   src-exe
    default-language: GHC2021

test-suite miniml-test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MinimlTest.hs
    other-modules:    CpsConvert
                    , Optimization.Contract
                    , Optimization.Flatten
                    , Optimization.Eta
                    , Optimization.Uncurry
                    , Optimization.Expand
                    , Optimization.Hoist
                    , Optimization.Cse
                    , Closure.Free
                    , Closure.Convert
                    , Closure.Lift
                    , Spill
                    , Semantic
    build-depends:    base ^>=4.21
                    , miniml
                    , containers
                    , extra
                    , mtl
                    , random
                    , tasty
                    , tasty-hunit
                    , text
                    , transformers
    ghc-options: -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wredundant-constraints
                 -Wredundant-record-wildcards
                 -Wunused-record-wildcards
                 -fshow-hole-constraints
                 -haddock